- Improved transfer of parameters from Kerbal => Vessel => Vessel, such as PlantFlag in an Apollo-style mission (thanks jordanjay29).
- Fixed possible exception on contract save.
- Fixed exception with WaypointGenerator for contracts using random waypoint names (thanks Galenmacil).
- Fixed CollectScience NRE issue (thanks severedsolo).

Contract Configurator 1.2.0
- Reduced ratio of stock vs. contract configurator contracts further to favor non-contract configurator a little more.
- Support in CollectScience for multiple experiments.
- Added activeUniqueValue flag for DATA nodes to check unique values for active/offered contracts only.
- Misc new functions for science expressions.
- Lots of fixes to science expression internals.
- Improved error handling for contract generation failures.
- Fixed uniqueValue in DATA nodes to work with Vessels.
- Fixed issue where ContractComplete throws errors if the related contract didn't load.
- Fixed issue with defaulting of targetBody on behaviours when an expression was used for the main targetBody.
- Fixed issue with WaypointGenerator behaviour getting inititalized twice (thanks AlphaAsh).
- Fixed issue with SpawnKerbal/SpawnVessel not working at all for splashed Kerbals/vessels (thanks AlphaAsh).
- Fixed HasAstronaut to check for changes to kerbals in more scenarios (thanks Athywren).
- Fixed expression parser issue that prevented contract notes from showing up correctly in Tourism Plus investory contract (thanks khearn).
- Minor bug fixes.

Contract Configurator 1.1.3
- Fix additional case where uniqueValue can cause an exception (thanks MikeSalvatierra).
- Add RemainingScience method to Biome class.
- Various minor science changes.
- Various minor bug fixes.

Contract Configurator 1.1.2
- Fix major issue with uniqueValue in DATA nodes - again (fixes issues in ScanSat Lite).
- Minor fixes to ExpressionParser.
- Minor fixes to CollectScience.

Contract Configurator 1.1.1